--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Asia/Calcutta
 
 favicon: /assets/favicons/favicon-16x16.png
 
@@ -41,7 +41,7 @@ social:
   email: "masuddarrahaman31@gmail.com" # Updated with your email address
   links:
     # The first element serves as the copyright owner's link
-    - "https://twitter.com/twitter_username" # Replace with your actual Twitter username
+    #- "https://twitter.com/twitter_username" # Replace with your actual Twitter username
     - "https://github.com/Masuddar" # Your GitHub homepage
     - "https://www.linkedin.com/in/masuddar-rahaman-b5044b283/" # Your LinkedIn profile
     # Uncomment below to add more social links
