--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ favicon: /assets/favicons/favicon-16x16.png
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Masuddar # the main title
+title: Masuddar.in # the main title
 
-tagline: Data science & AI # it will display as the subtitle
+tagline: Data science & AI/ML # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
