--- a/_config.yml
+++ b/_config.yml
@@ -64,9 +64,11 @@ webmaster_verifications:
 # The end of `jekyll-seo-tag` settings
 
 # Web Analytics Settings
+# Web Analytics Settings
 analytics:
   google:
-    id: # fill in your Google Analytics ID
+    id: G-87907T1H75
+
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
