--- a/_config.yml
+++ b/_config.yml
@@ -125,18 +125,22 @@ comments:
   # utterances settings › https://utteranc.es/
   utterances:
     repo: # <gh-username>/<repo>
-    issue_term: # < url | pathname | title | ...>
+    issue_term:    # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping: # optional, default to 'pathname'
-    strict: # optional, default to '0'
-    input_position: # optional, default to 'bottom'
-    lang: # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+    repo: Masuddar/comments
+    repo_id: R_kgDONwiL1A
+    category: General
+    category_id: DIC_kwDONwiL1M4CmZWQ
+    mapping: pathname
+    strict: "0"
+    input_position: "bottom"
+    reactions_enabled: "1"
+    emit_metadata: "0"
+    theme: "preferred_color_scheme"
+    lang: "en"
+
+
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
