--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,8 @@ title: Masuddar.in # the main title
 tagline: Data science, Tech. & AI/ML # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-Dive into the world of data science, AI, and machine learning with our captivating blog! Discover insightful articles, in-depth tutorials, and groundbreaking projects designed to ignite your passion for technology. Join our vibrant community of tech enthusiasts and stay ahead of the curve with the latest trends and advancements in the tech industry. Unleash your potential and be part of the innovation revolution! 🚀
+  "Dive into the world of data science, AI, and machine learning with insightful articles, comprehensive tutorials, and innovative projects. Join our community of tech enthusiasts and stay updated with the latest trends and advancements in technology."
+
 keywords: "data science, data analysis, technology, artificial intelligence, AI, machine learning, AI/ML, deep learning, tutorials, projects, tech trends, innovations, blogs, data science blogs, data science salary, data science degree, data science course, Bsc data science USA, Bsc data science india , Bsc data science 2025"
 
 
